--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 		<a href="#" class="logo">
 			<img src="images/gaming.png" alt="logo">
 		</a>
-		<h1 style="width: 3rem;">gaming community </h1>
-		<nav class="navbar">
+		<h1 style="width: 3rem; margin-left: -8rem;">gaming community </h1>
+		<nav class="navbar" style="margin-left: 3rem; margin-right: -3rem;">
 			<a href="#" class="active">Home</a>
 			<a href="pages/Games.html">Games</a>
 			<a href="pages/About.html">About</a>
-			<a href="pages/Contact.html">Contacts</a>
+			<a href="pages/Contacts.html">Contacts</a>
 		</nav>
 
 		<div class="buttons">
@@ -78,8 +78,7 @@
 			</div>
 			<div class="box">
 				<div class="box-head">
-					<img class="GTA" src="images/GTA.jpg" alt="menu" width="460" height="560"
-						style="border-radius: 2rem;" />
+					<img class="GTA" src="images/GTA.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
 					<span class="menu-category">abventure, Racing, action</span>
 					<h3>GRAND THEFT AUTO VI</h3>
 					<div class="price">$129.99 <span> $199.99</span></div>
@@ -90,11 +89,142 @@
 			</div>
 			<div class="box">
 				<div class="box-head">
-					<img class="RDR" src="images/RDR2.png" alt="menu" width="460" height="560"
-						style="border-radius: 2rem;" />
+					<img class="RDR" src="images/RDR2.png" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
 					<span class="menu-category">historic, survival, action</span>
 					<h3>RED DEAR REDEMPTION II</h3>
 					<div class="price">$69.99 <span>$99.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="images/ETS.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">driving</span>
+					<h3>EURO TRUCK SIMULATOR 2</h3>
+					<div class="price">FREE <span>$19.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="images/NFS.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">action, Racing</span>
+					<h3>NEED FOR SPEED MOST WANTED</h3>
+					<div class="price">FREE <span>$9.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="images/far-cry.jpeg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">historic, survival, action</span>
+					<h3>FAR - CRY: PRIMAL</h3>
+					<div class="price">$19.99 <span>$49.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="images/WOT.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">historic, strategy, action</span>
+					<h3>WORLD of TANKS: BLITZ</h3>
+					<div class="price">$49.99 <span>$79.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="images/WOW.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">historic, strategy, action</span>
+					<h3>WORLD of WARSHIPS</h3>
+					<div class="price">$49.99 <span>$79.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="images/COD.JPG" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">survival, action, Warfare</span>
+					<h3>CALL of DUTY: Modern Warfare</h3>
+					<div class="price">$39.99 <span>$99.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="images/HUNTER.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">historic, survival, action</span>
+					<h3>THE HUNTER: Call of the Wild</h3>
+					<div class="price">FREE <span>$99.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="images/HITMAN.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">action, triller, story</span>
+					<h3>HITMAN: Agent 47</h3>
+					<div class="price">FREE<span>$10.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="images/SGW.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">story, survival, action</span>
+					<h3>SNIPER GHOST WARRIOR</h3>
+					<div class="price">$72.99 <span>$99.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="images/FARM.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">ADVENTURE, SIMULATOR</span>
+					<h3>FARMING SIMULATOR 22</h3>
+					<div class="price">$69.99 <span>$99.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="images/ASPHALT" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">racing, action, multiplayer</span>
+					<h3>ASPHALT 9: Legends</h3>
+					<div class="price">FREE <span>$99.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="images/TheForest_Game.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">survival, action, horror, adventure</span>
+					<h3>THE FOREST: Survival</h3>
+					<div class="price">FREE <span>$99.99</span></div>
 				</div>
 				<div class="box-bottom">
 					<a href="#" class="btn">add to cart</a>
@@ -195,7 +325,7 @@
 			<a href="#" class="active">Home</a>
 			<a href="pages/Games.html">Games</a>
 			<a href="pages/About.html">About</a>
-			<a href="pages/Contact.html">Contact</a>
+			<a href="pages/ContactS.html">Contact</a>
 			<a target="_blank" href="https://www.tbceducation.ge/">
 				<img class="TBC" src="images/TBC.png" alt="">
 			</a>
