--- a/pages/Games.html
+++ b/pages/Games.html
@@ -1,130 +1,256 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-			integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-			crossorigin="anonymous" referrerpolicy="no-referrer" />
-		<title>ფინალური for TBC</title>
-		<link rel="stylesheet" href="../css/reset.css">
-		<link rel="stylesheet" href="../css/style.css">
-	</head>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+		integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<title>ფინალური for TBC</title>
+	<link rel="stylesheet" href="../css/reset.css" />
+	<link rel="stylesheet" href="../css/style.css" />
+</head>
 
-	<body>
-		<!--! header section start  -->
-		<header class="header">
-			<a href="#" class="logo">
-				<img src="../images/gaming.png" alt="logo">
-			</a>
-			<nav class="navbar">
-				<a href="../index.html">Home</a>
-				<a class="active" href="#">Games</a>
-				<a href="About.html">About</a>
-				<a href="Contact.html">Contacts</a>
-			</nav>
+<body>
+	<!--! header section start  -->
+	<header class="header">
+		<a href="#" class="logo">
+			<img src="../images/gaming.png" alt="logo" />
+		</a>
+		<h1 style="width: 3rem; margin-left: -8rem;">gaming community </h1>
+		<nav class="navbar" style="margin-left: 3rem; margin-right: -3rem;">
+			<a href="../index.html">Home</a>
+			<a class="active" href="#">Games</a>
+			<a href="About.html">About</a>
+			<a href="Contacts.html">Contacts</a>
+		</nav>
 
-			<div class="buttons">
-				<button>
-					<i class="fa-solid fa-magnifying-glass"></i>
-				</button>
-				<button>
-					<i class="fa-solid fa-cart-shopping"></i>
-				</button>
-				<button>
-					<i class="fa-solid fa-bars"></i>
-				</button>
-			</div>
-		</header>
-		<!--! header section end  -->
-
-		<!--! Games section start  -->
-
-		<section class="menu" id="menu">
-			<h1 class="heading">our <span>Games</span></h1>
-			<div class="box-container">
-				<div class="box">
-					<div class="box-head">
-						<img src="../images/forza-5.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
-						<span class="menu-category">Racing, action</span>
-						<h3>FORZA HORIZON 5: Demo edition</h3>
-						<div class="price">$79.99 <span>$99.99</span></div>
-					</div>
-					<div class="box-bottom">
-						<a href="#" class="btn">add to cart</a>
-					</div>
-				</div>
-				<div class="box">
-					<div class="box-head">
-						<img class="mine" src="../images/minecraft.jpg" alt="menu" width="460" height="560"
-							style="border-radius: 2rem;" />
-						<span class="menu-category">adventure</span>
-						<h3>MINECRAFT: Luancher</h3>
-						<div class="price">$19.99 <span>39.99</span></div>
-					</div>
-					<div class="box-bottom">
-						<a href="#" class="btn">add to cart</a>
-					</div>
-				</div>
-				<div class="box">
-					<div class="box-head">
-						<img class="GTA" src="../images/GTA.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
-						<span class="menu-category">abventure, Racing, action</span>
-						<h3>GRAND THEFT AUTO VI</h3>
-						<div class="price">$129.99 <span> $199.99</span></div>
-					</div>
-					<div class="box-bottom">
-						<a href="#" class="btn">add to cart</a>
-					</div>
-				</div>
-				<div class="box">
-					<div class="box-head">
-						<img class="RDR" src="../images/RDR2.png" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
-						<span class="menu-category">historic, survival, action</span>
-						<h3>RED DEAR REDEMPTION II</h3>
-						<div class="price">$69.99 <span>$99.99</span></div>
-					</div>
-					<div class="box-bottom">
-						<a href="#" class="btn">add to cart</a>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!--! Games section end  -->
-
-		<!--! footer section start  -->
-		<section class="footer">
+		<div class="buttons">
 			<div class="search">
 				<input type="text" class="search-input" placeholder="Search" />
 				<button class="btn btn-primary">search</button>
 			</div>
-			<div class="share">
-				<a href="#" class="fab fa-facebook"></a>
-				<a href="#" class="fab fa-twitter"></a>
-				<a href="#" class="fab fa-instagram"></a>
-				<a href="#" class="fab fa-linkedin"></a>
-				<a href="#" class="fab fa-pinterest"></a>
-			</div>
+	</header>
+	<!--! header section end  -->
 
-			<div class="links">
-				<a href="../index.html" >Home</a>
-				<a class="active" href="#">Games</a>
-				<a href="About.html">About</a>
-				<a href="Contact.html">Contact</a>
-				<a target="_blank" href="https://www.tbceducation.ge/">
-					<img class="TBC" src="../images/TBC.jpeg" alt="">
-				</a>
-			</div>
+	<!--! Games section start  -->
 
-			<div class="credit">
-				created by <span>Ali Mamajanov</span> | all rigths reserved
+	<section class="menu" id="menu">
+		<h1 class="heading">our <span>Games</span></h1>
+		<div class="box-container">
+			<div class="box">
+				<div class="box-head">
+					<img src="../images/forza-5.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem" />
+					<span class="menu-category">Racing, action</span>
+					<h3>FORZA HORIZON 5: Demo edition</h3>
+					<div class="price">$79.99 <span>$99.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
 			</div>
-		</section>
-		<!--! footer section end  -->
+			<div class="box">
+				<div class="box-head">
+					<img class="mine" src="../images/minecraft.jpg" alt="menu" width="460" height="560"
+						style="border-radius: 2rem" />
+					<span class="menu-category">adventure</span>
+					<h3>MINECRAFT: Luancher</h3>
+					<div class="price">$19.99 <span>39.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="GTA" src="../images/GTA.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem" />
+					<span class="menu-category">abventure, Racing, action</span>
+					<h3>GRAND THEFT AUTO VI</h3>
+					<div class="price">$129.99 <span> $199.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="../images/RDR2.png" alt="menu" width="460" height="560" style="border-radius: 2rem" />
+					<span class="menu-category">historic, survival, action</span>
+					<h3>RED DEAR REDEMPTION II</h3>
+					<div class="price">$69.99 <span>$99.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="../images/ETS.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">driving</span>
+					<h3>EURO TRUCK SIMULATOR 2</h3>
+					<div class="price">FREE <span>$19.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="../images/NFS.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">action, Racing</span>
+					<h3>NEED FOR SPEED MOST WANTED</h3>
+					<div class="price">FREE <span>$9.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="../images/far-cry.jpeg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">historic, survival, action</span>
+					<h3>FAR - CRY: PRIMAL</h3>
+					<div class="price">$19.99 <span>$49.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="../images/WOT.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">historic, strategy, action</span>
+					<h3>WORLD of TANKS: BLITZ</h3>
+					<div class="price">$49.99 <span>$79.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="../images/WOW.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">historic, strategy, action</span>
+					<h3>WORLD of WARSHIPS</h3>
+					<div class="price">$49.99 <span>$79.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="../images/COD.JPG" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">survival, action, Warfare</span>
+					<h3>CALL of DUTY: Modern Warfare</h3>
+					<div class="price">$39.99 <span>$99.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="../images/HUNTER.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">historic, survival, action</span>
+					<h3>THE HUNTER: Call of the Wild</h3>
+					<div class="price">FREE <span>$99.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="../images/HITMAN.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">action, triller, story</span>
+					<h3>HITMAN: Agent 47</h3>
+					<div class="price">FREE<span>$10.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="../images/SGW.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">story, survival, action</span>
+					<h3>SNIPER GHOST WARRIOR</h3>
+					<div class="price">$72.99 <span>$99.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="../images/FARM.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">ADVENTURE, SIMULATOR</span>
+					<h3>FARMING SIMULATOR 22</h3>
+					<div class="price">$69.99 <span>$99.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="../images/ASPHALT" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">racing, action, multiplayer</span>
+					<h3>ASPHALT 9: Legends</h3>
+					<div class="price">FREE <span>$99.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-head">
+					<img class="RDR" src="../images/TheForest_Game.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<span class="menu-category">survival, action, horror, adventure</span>
+					<h3>THE FOREST: Survival</h3>
+					<div class="price">FREE <span>$99.99</span></div>
+				</div>
+				<div class="box-bottom">
+					<a href="#" class="btn">add to cart</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--! Games section end  -->
 
-		<script src="Js/script.js"></script>
-	</body>
+	<!--! footer section start  -->
+	<section class="footer">
+		<div class="search">
+			<input type="text" class="search-input" placeholder="Search" />
+			<button class="btn btn-primary">search</button>
+		</div>
+		<div class="share">
+			<a href="#" class="fab fa-facebook"></a>
+			<a href="#" class="fab fa-twitter"></a>
+			<a href="#" class="fab fa-instagram"></a>
+			<a href="#" class="fab fa-linkedin"></a>
+			<a href="#" class="fab fa-pinterest"></a>
+		</div>
+
+		<div class="links">
+			<a href="../index.html">Home</a>
+			<a class="active" href="#">Games</a>
+			<a href="About.html">About</a>
+			<a href="Contacts.html">Contact</a>
+			<a target="_blank" href="https://www.tbceducation.ge/">
+				<img class="TBC" src="../images/TBC.png" alt="">
+			</a>
+		</div>
+
+		<div class="credit">
+			created by <span>Ali Mamajanov</span> | all rigths reserved
+		</div>
+	</section>
+	<!--! footer section end  -->
+
+	<script src="Js/script.js"></script>
+</body>
 
 </html>
