--- a/pages/About.html
+++ b/pages/About.html
@@ -1,121 +1,118 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-			integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-			crossorigin="anonymous" referrerpolicy="no-referrer" />
-		<title>ფინალური for TBC</title>
-		<link rel="stylesheet" href="../css/reset.css">
-		<link rel="stylesheet" href="../css/style.css">
-	</head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>ფინალური for TBC</title>
+  <link rel="stylesheet" href="../css/reset.css" />
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
 
-	<body>
-		<!--! header section start  -->
-		<header class="header">
-			<a href="#" class="logo">
-				<img src="../images/gaming.png" alt="logo">
-			</a>
-			<nav class="navbar">
-				<a href="../index.html">Home</a>
-				<a href="Games.html">Games</a>
-				<a class="active" href="#">About</a>
-				<a href="Contact.html">Contacts</a>
-			</nav>
-
-			<div class="buttons">
-				<button>
-					<i class="fa-solid fa-magnifying-glass"></i>
-				</button>
-				<button>
-					<i class="fa-solid fa-cart-shopping"></i>
-				</button>
-				<button>
-					<i class="fa-solid fa-bars"></i>
-				</button>
-			</div>
-		</header>
-		<!--! header section end  -->
-
-		<!--! about section start  -->
-		<section class="about" id="about">
-			<h1 class="heading">about <span>OUR Games</span></h1>
-			<div class="row">
-				<div class="image">
-					<img src="../images/forza-about.jpg" alt="about" />
-					<img src="../images/minecraft (1).jpg" alt="about">
-					<img src="../images/GTAabout.jpg" alt="about">
-					<img src="../images/RDR.avif" alt="about">
-				</div>
-				<div class="content">
-					<h3 class="h5">FORZA HORIZON 5: Demo Edition</h3>
-					<p class="p">
-						Forza Horizon 5 is a 2021 racing video game developed by Playground
-						Games and published by Xbox Game Studios. It is the fifth Forza Horizon
-						title and twelfth main instalment in the Forza series. The game is set
-						in a fictionalised representation of Mexico. It was released on 9
-						November 2021 for Windows, Xbox One, and Xbox Series X/S
-					</p>
-					<h3 class="h6">MINECRAFT: Luancher</h3>
-					<p class="p">
-						Minecraft is a game made up of blocks, creatures, and community. Blocks
-						can be used to reshape the world or build fantastical creations. Creatures
-						can be battled or befriended, depending on your playstyle. Experience epic
-						adventures solo or with friends, there's no wrong way to play.
-					</p>
-					<h3 class="h7">GRAND THEFT AUTO VI</h3>
-					<p class="p">
-						GTA 6 is coming in 2025, with Rockstar Games taking us back to the
-						sun-soaked streets of Vice City. The reveal of the first official GTA 6 trailer
-						gave us a pretty spectacular look at Leonida, hinting towards some of the wild
-						sights and sounds that the state will have to offer us.
-					</p>
-					<h3 class="h8">RED DEAD REDEMPTION II</h3>
-					<p class="p">
-						Red Dead Redemption 2 is a Western-themed action-adventure game. Played from a
-						first- or third-person perspective, the game is set in an open-world environment
-						featuring a fictionalized version of the United States in 1899.
-					</p>
-					<a href="#" class="btn">learn more</a>
-				</div>
-			</div>
-		</section>
-		<!--! about section end  -->
-
-		<!--! footer section start  -->
-		<section class="footer">
+<body>
+  <!--! header section start  -->
+  <header class="header">
+    <a href="#" class="logo">
+      <img src="../images/gaming.png" alt="logo" />
+    </a>
+		<h1 style="width: 3rem; margin-left: -8rem;">gaming community </h1>
+		<nav class="navbar" style="margin-left: 3rem; margin-right: -3rem;">
+      <a href="../index.html">Home</a>
+      <a href="Games.html">Games</a>
+      <a class="active" href="#">About</a>
+      <a href="Contacts.html">Contacts</a>
+    </nav>
+		<div class="buttons">
 			<div class="search">
 				<input type="text" class="search-input" placeholder="Search" />
 				<button class="btn btn-primary">search</button>
 			</div>
-			<div class="share">
-				<a href="#" class="fab fa-facebook"></a>
-				<a href="#" class="fab fa-twitter"></a>
-				<a href="#" class="fab fa-instagram"></a>
-				<a href="#" class="fab fa-linkedin"></a>
-				<a href="#" class="fab fa-pinterest"></a>
-			</div>
-	
-			<div class="links">
-				<a href="../index.html" >Home</a>
-				<a href="Games.html">Games</a>
-				<a class="active" href="#">About</a>
-				<a href="Contact.html">Contact</a>
-				<a target="_blank" href="https://www.tbceducation.ge/">
-					<img class="TBC" src="../images/TBC.jpeg" alt="">
-				</a>
-			</div>
-	
-			<div class="credit">
-				created by <span>Ali Mamajanov</span> | all rigths reserved
-			</div>
-		</section>
-		<!--! footer section end  -->
-	
-		<script src="Js/script.js"></script>
-	</body>
-	
+  </header>
+  <!--! header section end  -->
+
+  <!--! about section start  -->
+  <section class="about" id="about">
+    <h1 class="heading">about <span>OUR Games</span></h1>
+    <div class="row">
+      <div class="image">
+        <img src="../images/forza-about.jpg" alt="about" />
+        <img src="../images/minecraft (1).jpg" alt="about" />
+        <img src="../images/GTAabout.jpg" alt="about" />
+        <img src="../images/RDR.avif" alt="about" />
+      </div>
+      <div class="content">
+        <h3 class="h5">FORZA HORIZON 5: Demo Edition</h3>
+        <p class="p">
+          Forza Horizon 5 is a 2021 racing video game developed by Playground
+          Games and published by Xbox Game Studios. It is the fifth Forza
+          Horizon title and twelfth main instalment in the Forza series. The
+          game is set in a fictionalised representation of Mexico. It was
+          released on 9 November 2021 for Windows, Xbox One, and Xbox Series
+          X/S
+        </p>
+        <h3 class="h6">MINECRAFT: Luancher</h3>
+        <p class="p">
+          Minecraft is a game made up of blocks, creatures, and community.
+          Blocks can be used to reshape the world or build fantastical
+          creations. Creatures can be battled or befriended, depending on your
+          playstyle. Experience epic adventures solo or with friends, there's
+          no wrong way to play.
+        </p>
+        <h3 class="h7">GRAND THEFT AUTO VI</h3>
+        <p class="p">
+          GTA 6 is coming in 2025, with Rockstar Games taking us back to the
+          sun-soaked streets of Vice City. The reveal of the first official
+          GTA 6 trailer gave us a pretty spectacular look at Leonida, hinting
+          towards some of the wild sights and sounds that the state will have
+          to offer us.
+        </p>
+        <h3 class="h8">RED DEAD REDEMPTION II</h3>
+        <p class="p">
+          Red Dead Redemption 2 is a Western-themed action-adventure game.
+          Played from a first- or third-person perspective, the game is set in
+          an open-world environment featuring a fictionalized version of the
+          United States in 1899.
+        </p>
+        <a href="#" class="btn">learn more</a>
+      </div>
+    </div>
+  </section>
+  <!--! about section end  -->
+
+  <!--! footer section start  -->
+  <section class="footer">
+    <div class="search">
+      <input type="text" class="search-input" placeholder="Search" />
+      <button class="btn btn-primary">search</button>
+    </div>
+    <div class="share">
+      <a href="#" class="fab fa-facebook"></a>
+      <a href="#" class="fab fa-twitter"></a>
+      <a href="#" class="fab fa-instagram"></a>
+      <a href="#" class="fab fa-linkedin"></a>
+      <a href="#" class="fab fa-pinterest"></a>
+    </div>
+
+    <div class="links">
+      <a href="../index.html">Home</a>
+      <a href="Games.html">Games</a>
+      <a class="active" href="#">About</a>
+      <a href="Contacts.html">Contact</a>
+      <a target="_blank" href="https://www.tbceducation.ge/">
+				<img class="TBC" src="../images/TBC.png" alt="">
+			</a>
+    </div>
+
+    <div class="credit">
+      created by <span>Ali Mamajanov</span> | all rigths reserved
+    </div>
+  </section>
+  <!--! footer section end  -->
+
+  <script src="Js/script.js"></script>
+</body>
+
 </html>
