--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			</div>
 			<div class="box">
 				<div class="box-head">
-					<img class="RDR" src="images/WOT.jpg" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
+					<img class="RDR" src="images/WOT.png" alt="menu" width="460" height="560" style="border-radius: 2rem;" />
 					<span class="menu-category">historic, strategy, action</span>
 					<h3>WORLD of TANKS: BLITZ</h3>
 					<div class="price">$49.99 <span>$79.99</span></div>
